# pyoxidizer-resource-tests

./: README.md  pyoxidizer.bzl  pyproject.toml
src/resource_tests/: tests.py
